# rules_kind

./: BUILD.bazel  CLAUDE.md  DESIGN.md  MODULE.bazel  README.md  WORKSPACE  defs.bzl  extensions.bzl  repositories.bzl
.github/workflows/: ci.yml
private/: binary.bzl  cluster.bzl  launcher.py
tests/: BUILD.bazel  cluster_test.sh  kind_health_check_test.sh  kind_server_test.sh  manifest_test.sh  pod_to_pod_test.sh
tests/manifests/: hello_server.yaml  test_configmap.yaml
toolchain/: BUILD.bazel  toolchain.bzl
