module(
    name = "rules_kind",
    version = "0.1.0",
)

bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "platforms", version = "0.0.9")

kind = use_extension("//:extensions.bzl", "kind")
kind.system(versions = ["1.29"])
use_repo(kind,
    "kind_1_29_linux_amd64",
    "kind_1_29_darwin_arm64",
    "kind_1_29_darwin_amd64",
)
