load("@rules_shell//shell:sh_test.bzl", "sh_test")
load("//:defs.bzl", "kind_cluster", "kind_health_check")

# ---------------------------------------------------------------------------
# kind_cluster service for all Docker-requiring tests
# ---------------------------------------------------------------------------

kind_cluster(
    name        = "test_cluster",
    k8s_version = "1.29",
    tags        = ["manual", "no-sandbox", "requires-docker"],
)

kind_health_check(
    name    = "test_cluster_health",
    cluster = ":test_cluster",
)

# ---------------------------------------------------------------------------
# kind_cluster with manifests applied
# ---------------------------------------------------------------------------

kind_cluster(
    name      = "test_cluster_with_manifests",
    k8s_version = "1.29",
    manifests = glob(["manifests/*.yaml"]),
    tags      = ["manual", "no-sandbox", "requires-docker"],
)

kind_health_check(
    name    = "test_cluster_with_manifests_health",
    cluster = ":test_cluster_with_manifests",
)

# ---------------------------------------------------------------------------
# kind_health_check_test — no Docker required
# ---------------------------------------------------------------------------
# Tests that the health check exits non-zero without the env file,
# and exits 0 when the env file is present.

sh_test(
    name = "kind_health_check_test",
    srcs = ["kind_health_check_test.sh"],
    data = [":test_cluster_health"],
    tags = ["no-sandbox"],
)

# ---------------------------------------------------------------------------
# kind_server_test — requires Docker
# Tests: kind_cluster starts, writes env file, env vars present, SIGTERM shuts down.
# ---------------------------------------------------------------------------

sh_test(
    name    = "kind_server_test",
    srcs    = ["kind_server_test.sh"],
    data    = [":test_cluster"],
    size    = "large",
    timeout = "long",
    tags    = ["manual", "no-sandbox", "requires-docker"],
)

# ---------------------------------------------------------------------------
# cluster_test — requires Docker
# Tests: cluster connectivity, pod scheduling.
# ---------------------------------------------------------------------------

sh_test(
    name    = "cluster_test",
    srcs    = ["cluster_test.sh"],
    data    = [":test_cluster"],
    size    = "large",
    timeout = "long",
    tags    = ["manual", "no-sandbox", "requires-docker"],
)

# ---------------------------------------------------------------------------
# manifest_test — requires Docker
# Tests: manifests applied before env file written.
# ---------------------------------------------------------------------------

sh_test(
    name    = "manifest_test",
    srcs    = ["manifest_test.sh"],
    data    = [":test_cluster_with_manifests"],
    size    = "large",
    timeout = "long",
    tags    = ["manual", "no-sandbox", "requires-docker"],
)

# ---------------------------------------------------------------------------
# pod_to_pod_test — requires Docker
# kind_cluster with a pre-deployed HTTP server (hello-server pod + Service).
# Tests: pod scheduling, cluster DNS, pod-to-pod HTTP communication.
# ---------------------------------------------------------------------------

kind_cluster(
    name      = "test_cluster_pod_to_pod",
    k8s_version = "1.29",
    manifests = ["manifests/hello_server.yaml"],
    tags      = ["manual", "no-sandbox", "requires-docker"],
)

kind_health_check(
    name    = "test_cluster_pod_to_pod_health",
    cluster = ":test_cluster_pod_to_pod",
)

sh_test(
    name    = "pod_to_pod_test",
    srcs    = ["pod_to_pod_test.sh"],
    data    = [":test_cluster_pod_to_pod"],
    size    = "large",
    timeout = "long",
    tags    = ["manual", "no-sandbox", "requires-docker"],
)

# ---------------------------------------------------------------------------
# k8s 1.32 — analysis-time only. Confirms the macro picks the 1.32
# kind+kubectl pair (kind v0.27.0 / kubectl 1.32.2) and that the kindest
# /node:v1.32.2 pin resolves. Marked manual; consumers exercise it via their
# own smoke tests (e.g. rules_cilium).
# ---------------------------------------------------------------------------

kind_cluster(
    name        = "test_cluster_1_32",
    k8s_version = "1.32",
    tags        = ["manual", "no-sandbox", "requires-docker"],
)

kind_health_check(
    name    = "test_cluster_1_32_health",
    cluster = ":test_cluster_1_32",
)
